--- a/app/_sass/pages/_front.scss
+++ b/app/_sass/pages/_front.scss
@@ -1,4 +1,4 @@
-.home {
+.front {
 	.block {
 		&.contactform {
 			@include background();
@@ -8,7 +8,7 @@
 }
 
 @include breakpoint($desktop) {
-	.home {
+	.front {
 		.block {
 			&.references {
 				.reference {
