--- a/app/_sass/sections/_body.scss
+++ b/app/_sass/sections/_body.scss
@@ -1,4 +1,13 @@
 .body {
+	@include font('normal');
+	width: 100vw;
+	height: auto;
+	height: 100vh;
+	overflow-x: hidden;
+	overflow-y: scroll;
+	perspective: 1px;
+	perspective-origin: center center; 
+	transform-style: preserve-3d; // dont know if nessecary
 
 	&.pinned {
 		max-height: 100vh;
