--- a/app/assets/css/stylesheet.css
+++ b/app/assets/css/stylesheet.css
@@ -795,22 +795,6 @@ body,
 html {
   overflow-x: hidden; }
 
-body {
-  font-family: "OpenSans", sans-serif;
-  font-size: 1rem;
-  line-height: 1.5;
-  font-weight: 400;
-  width: 100vw;
-  height: auto;
-  height: 100vh;
-  overflow-x: hidden;
-  -webkit-perspective: 1px;
-  perspective: 1px;
-  -webkit-perspective-origin: center center;
-  perspective-origin: center center;
-  -webkit-transform-style: preserve-3d;
-  transform-style: preserve-3d; }
-
 .invisible,
 .none {
   display: none; }
@@ -866,6 +850,7 @@ figure, figcaption, footer, header, hgroup,
 menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
   -webkit-font-smoothing: antialiased;
+  -webkit-overflow-scrolling: touch;
   margin: 0;
   padding: 0;
   font-size: 100%;
@@ -1207,10 +1192,26 @@ button::-moz-focus-inner {
       display: block;
       height: 100%; } }
 
-.body.pinned {
-  max-height: 100vh;
-  position: fixed;
-  overflow-y: scroll; }
+.body {
+  font-family: "OpenSans", sans-serif;
+  font-size: 1rem;
+  line-height: 1.5;
+  font-weight: 400;
+  width: 100vw;
+  height: auto;
+  height: 100vh;
+  overflow-x: hidden;
+  overflow-y: scroll;
+  -webkit-perspective: 1px;
+  perspective: 1px;
+  -webkit-perspective-origin: center center;
+  perspective-origin: center center;
+  -webkit-transform-style: preserve-3d;
+  transform-style: preserve-3d; }
+  .body.pinned {
+    max-height: 100vh;
+    position: fixed;
+    overflow-y: scroll; }
 
 .footer {
   width: -webkit-calc(var(--max-width) /24 * 22);
