--- a/app/_includes/_sections/head.html
+++ b/app/_includes/_sections/head.html
@@ -14,6 +14,7 @@
 		<meta name="last-modified" content="Sun, 3 Sep 2017 14:00:46 GMT " />
 		<meta name="cache-control" content="Private" />
 		<meta name="Expires" content="600" />
+
 		<link rel="sitemap" type="application/xml" title="Sitemap" href="sitemap.xml" />
 		<link rel="apple-touch-icon" sizes="180x180" href="/assets/img/favicons/apple-touch-icon.png">
 		<link rel="icon" type="image/png" sizes="32x32" href="/assets/img/favicons/favicon-32x32.png">
@@ -24,14 +25,20 @@
 		<meta name="msapplication-TileColor" content="#2d89ef">
 		<meta name="msapplication-config" content="/assets/img/favicons/browserconfig.xml">
 		<meta name="theme-color" content="#ffffff">
+
 		<meta property="og:title" content="{{ site.author.name }}">
 		<meta property="og:description" content="{{ site.description }}">
 		<meta property="og:image" content="{{ page.headerimage }}">
-		<!-- <meta property="og:image:width" content="850" /> -->
-		<!-- <meta property="og:image:height" content="567" /> -->
+		<meta property="og:image:width" content="{{page.imagewidth}}" />
+		<meta property="og:image:height" content="{{page.imageheight}}" />
 		<meta property="og:url" content="{{ site.url }}">
 		<meta property="og:type" content="website">
 		<meta property="og:site_name" content="{{ site.author.name }}">
+
+		<meta name="twitter:card" content="summary" />
+		<meta name="twitter:site" content="@{{site.author.twitter}}" />
+		<meta name="twitter:creator" content="@{{site.author.twitter}}" />
+
 		<!-- Global site tag (gtag.js) - Google Analytics -->
 		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-106728519-3"></script>
 		<script>
