--- a/app/_sass/elements/_button.scss
+++ b/app/_sass/elements/_button.scss
@@ -6,6 +6,7 @@
 	display: inline-block;
 	box-shadow: $box-shadow;
 	background-color: $primary;
+	transition: all $speed/2;
 	
 	&:hover {
 		background-color: $hover;
