--- a/app/_sass/elements/blocks/_block.scss
+++ b/app/_sass/elements/blocks/_block.scss
@@ -35,6 +35,7 @@ main > .block {
 
 @include breakpoint($desktop) {
 	main > .block {
-		width: #{100vw / 37 * 35};
+		max-width: $max-width;
+		width: calc(var(--max-width) / 37 * 35);
 	}
 }
