--- a/app/_sass/elements/form/_form.scss
+++ b/app/_sass/elements/form/_form.scss
@@ -80,6 +80,28 @@
 		margin-top: $padding;
 		transition: all $speed/2;
 		margin-bottom: 0;
+
+			+ .checkmark {
+				display: none;
+				position: absolute;
+				width: 30px;
+				fill: white;
+				margin-top: -42px;
+				margin-left: 30px;
+				z-index: 300;
+				position: relative;
+			}
+
+		&.success {
+			background-color: #6bd47d !important;
+			box-shadow: none;
+		    max-width: 340px;
+		    pointer-events: none;
+
+			+ .checkmark {
+				display: block;
+			}
+		}
 	}
 }
 
@@ -89,6 +111,14 @@
 			width: calc(var(--max-width) / 37 * 17);
 			margin-right: calc(var(--max-width) / 37 * 1);
 			display: inline-block;
+		}
+
+		input[type='submit'],
+		.send {
+
+			+ .checkmark {
+				margin-left: 60px;
+			}
 		}
 		
 		.email {
