--- a/app/_sass/variables/_grid.scss
+++ b/app/_sass/variables/_grid.scss
@@ -17,7 +17,7 @@ $offset: 50px;
 
 :root {--max-width: 100vw;}
 @media only screen and (min-width: $max-width) {
-  :root { --max-width: $max-width !important;}
+  :root { --max-width: 960px !important;}
 }
 
 $max-width: var(--max-width);
