--- a/app/_layouts/detailpage.html
+++ b/app/_layouts/detailpage.html
@@ -9,7 +9,7 @@
 </div>
 
 <main>	
-	<picture class="picture">
+	<picture class="picture focuspoint">
 		<img class="img" src="{{ page.headerimage }}" alt="Jelle Kuiper">
 	</picture>
 	
