stijling met koen

--- a/app/_layouts/page.html
+++ b/app/_layouts/page.html
@@ -21,7 +21,7 @@
 				<h3 class="title">{{page.title}}</h3>
 				<p class="keywords">{{page.keywords}}</p>
 				<p class="description">{{page.teaserText}}</p>
-				<a href="/theaterproducties" class="button">Lees meer</a>
+				<a href="/{{page.title | downcase}}" class="button">Lees meer</a>
 			</div>
 			<picture class="focuspoint reference-image">
 				<img class="img" src="{{page.headerimage}}" alt="Jelle Kuiper">
