--- a/app/_sass/elements/form/_validator.scss
+++ b/app/_sass/elements/form/_validator.scss
@@ -15,7 +15,7 @@
 .contactform {
 	input[type='submit'],
 	.send {
-		background-color: $primary;
+		background-color: $placeholder;
 		cursor: pointer;
 		pointer-events: all;
 	}
