--- a/app/_includes/_blocks/contactform.html
+++ b/app/_includes/_blocks/contactform.html
@@ -2,17 +2,17 @@
 	<form id="gform" class="form" method="POST">
 		<strong class="subtitle">Contact</strong>
 		<p>Heb je een vraag of wil je kennis maken? Bel op <a class="tel"></a> of stuur me een berichtje.</p>
-		<label for="name">Naam {{site.author.email}}</label>
+		<label for="name">Naam</label>
 	    <input class="form-field" type="text" name="name" placeholder="B.v. Charlotte van Dijk" required>
 	    
 		<label for="email">E-mail</label>
 	    <input class="form-field" type="email" name="email" placeholder="B.v. charlottevandijk@gmail.com" required>
 
 		<label for="subject">Onderwerp</label>
-	    <input class="form-field" type="text" name="subject" placeholder="Bv. Trouwambtenaar Amsterdam" required>
+	    <input class="form-field" type="text" name="subject" placeholder="{{page.subject}}" required>
 		
 		<label for="message">Bericht</label>
-	    <textarea class="form-field" name="message" rows="5" placeholder="Bv. Hoi Jelle, ik ga trouwen op 20 Juni. Ben je dan beschikbaar als trouwambtenaar? Groetjes, Laura" required></textarea>
+	    <textarea class="form-field" name="message" rows="5" placeholder="{{page.message}}" required></textarea>
 
 	    <input type="hidden" id="honeypot" type="text" name="honeypot" value="" />
 	    <input type="hidden"class="to" type="text" name="to" value="" />
