--- a/app/_includes/_blocks/hero.html
+++ b/app/_includes/_blocks/hero.html
@@ -9,6 +9,6 @@
 		<h1 class="title">{{ page.title }}</h1>
 		<h2 class="subtitle">{{ page.keywords }}</h2>
 		<p class="introduction">{{ page.summary }}</p>
-		<a href="#contact" class="button">Contact</a>
+		<!-- <a href="#contact" class="button">Contact</a> -->
 	</div>
 </div>
