--- a/app/_sass/elements/blocks/_block.contactform.scss
+++ b/app/_sass/elements/blocks/_block.contactform.scss
@@ -9,6 +9,6 @@
 @include breakpoint ($desktop) {
 	.block.contactform {
 		min-height: auto;
-	    overflow: hidden;
+	    // overflow: hidden;
 	}
 }
