--- a/app/_sass/elements/form/_form.scss
+++ b/app/_sass/elements/form/_form.scss
@@ -2,7 +2,6 @@
 	input, textarea, label {
 		width: 100%;
 		box-sizing: border-box;
-
 		// remove yellow background from autocomplete
 		&:-webkit-autofill {
 	    	-webkit-box-shadow: 0 0 0 30px white inset !important;
@@ -11,7 +10,7 @@
 
 	input:required {
 	    box-shadow:none;
-		border: 1px solid #d0d0d0;
+			border: 1px solid #d0d0d0;
 	    background: transparent;
 	}
 
@@ -40,6 +39,10 @@
 		font-weight: 800;
 		margin-bottom: 5px;
 		display: block;
+	}
+
+	.form-field {
+		background-color: $white !important;
 	}
 
 	input, textarea {
@@ -93,10 +96,10 @@
 			}
 
 		&.success {
-			background-color: #6bd47d !important;
+			background-color: $primary !important;
 			box-shadow: none;
-		    max-width: 340px;
-		    pointer-events: none;
+	    max-width: 340px;
+	    pointer-events: none;
 
 			+ .checkmark {
 				display: block;
@@ -117,7 +120,7 @@
 		.send {
 
 			+ .checkmark {
-				margin-left: 60px;
+				margin-left: 30px;
 			}
 		}
 		
@@ -134,7 +137,7 @@
 		input[type='submit'],
 		.send {
 			width: calc(var(--max-width) / 37 * 15);
-			margin-left: calc(var(--max-width) / 37 * 1);
+			// margin-left: calc(var(--max-width) / 37 * 1);
 		}
 	}
 }
