--- a/app/_sass/pages/_page.scss
+++ b/app/_sass/pages/_page.scss
@@ -28,8 +28,17 @@
 					top: -$gutter/2;
 				}
 
+				.title {
+					font-size: 2rem !important;
+				}
+
+				.keywords {
+					font-size: 16px !important;
+				}
+
 				.reference-image {
 					height: 100%;
+					width: calc(var(--max-width) / 37 * 17) !important;
 				}
 
 				.reference {
@@ -53,6 +62,11 @@
 				display: flex;
 				justify-content: space-between;
 				height: 700px;
+				// width: calc(var(--max-width) / 37 * 17);
+
+				.form {
+					padding: 0 calc(var(--max-width) / 37 * 1);
+				}
 
 				> * {
 					flex: 0 0 calc(var(--max-width) / 37 * 17);
