--- a/app/_sass/elements/blocks/_block.hero.scss
+++ b/app/_sass/elements/blocks/_block.hero.scss
@@ -28,9 +28,9 @@
 	display: flex;
 	align-items: center;
 	flex-direction: column;
-	height: calc(100vh - #{$offset});
-	justify-content: flex-end;
-	padding-bottom: $padding * 3;
+	height: calc(90vh - #{$offset});
+	justify-content: center;
+	// padding-bottom: $padding * 3;
     position: relative;
     width: 100vw;
 	overflow: hidden;
@@ -70,16 +70,21 @@
 @include breakpoint($desktop) {
 	.block.hero {
 		justify-content: center;
-		height: calc(90vh );
+		height: calc(85vh);
 		padding: 0;
 
 		.title {
 			font-size: 3em !important;
 		}
 
+		.subtitle {
+			font-size: 20px !important;
+		}
+
 		.introduction {
 			max-width: calc(var(--max-width) / 37 * 22);
 			line-height: 1.7;
+
 			margin-bottom: $padding;
 		}
 
