--- a/app/_sass/elements/menu/_main-menu.scss
+++ b/app/_sass/elements/menu/_main-menu.scss
@@ -9,6 +9,8 @@
 		width: 100vw;
 		top: 0;
 		left: 0;
+		transition: all 0.25s ease;
+		transform: scale(.5);
 		opacity: 0;
 		position: fixed;
 		flex-direction: column;
