--- a/app/_includes/_sections/head.html
+++ b/app/_includes/_sections/head.html
@@ -35,7 +35,7 @@
 		<meta property="og:type" content="website">
 		<meta property="og:site_name" content="{{ site.author.name }}">
 
-		<meta name="twitter:card" content="summary" />
+		<meta name="twitter:card" content="summary_large_image" />
 		<meta name="twitter:site" content="@{{site.author.twitter}}" />
 		<meta name="twitter:creator" content="@{{site.author.twitter}}" />
 
