--- a/app/assets/css/stylesheet.css
+++ b/app/assets/css/stylesheet.css
@@ -1248,6 +1248,10 @@ button::-moz-focus-inner {
   .footer .address {
     font-style: normal;
     line-height: 2; }
+  .footer .icons a {
+    height: 70px;
+    display: inline-block;
+    overflow: visible; }
 
 @media (min-width: 770px) {
   .footer {
