fixing the form on the front

--- a/app/_includes/_blocks/contactform.html
+++ b/app/_includes/_blocks/contactform.html
@@ -2,22 +2,27 @@
 	<form id="gform" class="form" method="POST">
 		<strong class="subtitle">Contact</strong>
 		<p>Heb je een vraag of wil je kennis maken? Bel op <a class="tel"></a> of stuur me een berichtje.</p>
-		<label for="name">Naam</label>
-	    <input class="form-field" type="text" name="name" placeholder="B.v. Charlotte van Dijk" required>
-	    
-		<label for="email">E-mail</label>
-	    <input class="form-field" type="email" name="email" placeholder="B.v. charlottevandijk@gmail.com" required>
+
+		<div class="salutation">
+			<label for="name">Naam</label>
+		  <input class="form-field" type="text" name="name" placeholder="B.v. Charlotte van Dijk" required>
+		</div>
+		
+		<div class="salutation-2">    
+			<label for="email">E-mail</label>
+		  <input class="form-field" type="email" name="email" placeholder="B.v. charlottevandijk@gmail.com" required>
+		</div>
 
 		<label for="subject">Onderwerp</label>
-	    <input class="form-field" type="text" name="subject" placeholder="{{page.subject}}" required>
+	  <input class="form-field" type="text" name="subject" placeholder="{{page.subject}}" required>
 		
 		<label for="message">Bericht</label>
-	    <textarea class="form-field" name="message" rows="5" placeholder="{{page.message}}" required></textarea>
+	  <textarea class="form-field" name="message" rows="5" placeholder="{{page.message}}" required></textarea>
 
-	    <input type="hidden" id="honeypot" type="text" name="honeypot" value="" />
-	    <input type="hidden"class="to" type="text" name="to" value="" />
-	    <input class="send button" type="submit" value="Verstuur bericht" >
-	    <span class="checkmark">{% include _svg/checkmark.svg %}</span>
+	  <input type="hidden" id="honeypot" type="text" name="honeypot" value="" />
+	  <input type="hidden"class="to" type="text" name="to" value="" />
+	  <input class="send button" type="submit" value="Verstuur bericht" >
+	  <span class="checkmark">{% include _svg/checkmark.svg %}</span>
 	</form>
 	<picture class="focuspoint picture">
 			<img class="img" src="{{ page.formimage }}" alt="Jelle Kuiper">
