--- a/app/_sass/variables/_grid.scss
+++ b/app/_sass/variables/_grid.scss
@@ -28,7 +28,7 @@ body:after {
   content: '';
   display: none;
   width: 100%;
-  height: 100%;
+  height: 5000vh;
   max-width: var(--max-width);
   position: fixed;
   left: 50%;
