--- a/app/_includes/_blocks/testimonials.html
+++ b/app/_includes/_blocks/testimonials.html
@@ -1,13 +1,29 @@
-<section class="block testimonials">
-	<div class="inner">
-		<strong class="subtitle">Reacties</strong>
-		<div class="owl-carousel owl-theme">
-			{% for testimonial in site.data.testimonials %}
-				<article>
-					<blockquote class="quote">{{ testimonial.text }}"</blockquote>
-					<p class="name">{{ testimonial.name }}</p>
-				</article>
-			{% endfor %}
+{% if page.path contains 'trouwambtenaar' %}
+	<section class="block testimonials">
+		<div class="inner">
+			<strong class="subtitle">Reacties</strong>
+			<div class="owl-carousel owl-theme">
+				{% for testimonial in site.data.trouwambtenaar %}
+					<article>
+						<blockquote class="quote">{{ testimonial.text }}"</blockquote>
+						<p class="name">{{ testimonial.name }}</p>
+					</article>
+				{% endfor %}
+			</div>
 		</div>
-	</div>
-</section>
+	</section>
+{% elsif page.path contains 'bedrijfsoptredens' %}
+	<section class="block testimonials">
+		<div class="inner">
+			<strong class="subtitle">Reacties</strong>
+			<div class="owl-carousel owl-theme">
+				{% for testimonial in site.data.bedrijfsoptredens %}
+					<article>
+						<blockquote class="quote">{{ testimonial.text }}"</blockquote>
+						<p class="name">{{ testimonial.name }}</p>
+					</article>
+				{% endfor %}
+			</div>
+		</div>
+	</section>
+{% endif %}
