--- a/app/_sass/variables/_grid.scss
+++ b/app/_sass/variables/_grid.scss
@@ -17,10 +17,10 @@ $offset: 50px;
 
 :root {--max-width: 100vw;}
 @media only screen and (min-width: $max-width) {
-  :root { --max-width: 960px !important;}
+  :root { --max-width: #{$max-width} !important;}
 }
 
-$max-width: var(--max-width);
+$max-width: --max-width;
 
 
 // Singularity visualizer
