--- a/app/_sass/elements/menu/_main-menu.scss
+++ b/app/_sass/elements/menu/_main-menu.scss
@@ -47,9 +47,10 @@
 				}
 			}
 
-			&:hover,
+			// &:hover,
 			&.active {
 				opacity: 1;
+				
 				.menu-link {
 					&:after {
 						width: 100%;
