fixed the focuspoints on all pages

--- a/app/_includes/_blocks/header.html
+++ b/app/_includes/_blocks/header.html
@@ -2,7 +2,7 @@
 	<nav class="main-menu">
 		<div class="menu-toggle"></div>
 		<a href="/"><h1 class="logo">Jelle Kuiper</h1></a>
-		<ul class="nav">
+		<ul class="nav" style="opacity:0;">
 			<li class="menu-item {% if page.layout contains 'front' %}active{% endif %}"><a href="/" class="menu-link">Home</a></li>
 			<li class="menu-item {% if page.path contains 'trouwambtenaar' %}active{% endif %}"><a href="/trouwambtenaar" class="menu-link">Trouwambtenaar</a></li>
 			<li class="menu-item {% if page.path contains 'bedrijfsoptredens' %}active{% endif %}"><a href="/bedrijfsoptredens"  class="menu-link">Bedrijfsoptredens</a></li>
