--- a/app/_includes/section/section.footer.html
+++ b/app/_includes/section/section.footer.html
@@ -18,8 +18,8 @@
 			</ul>
 			<div class="right">
 				<aside class="icons">
-					<a target="blank" href="https://vimeo.com/jellekuiper">{% include _svg/vimeo.svg %}</a>
-					<a target="blank" href="https://twitter.com/jelle_kuiper">{% include _svg/twitter.svg %}</a>
+					<a target="blank" href="https://vimeo.com/jellekuiper">{% include svg/vimeo.svg %}</a>
+					<a target="blank" href="https://twitter.com/jelle_kuiper">{% include svg/twitter.svg %}</a>
 				</aside>
 				<address class="address">
 						Jelle Kuiper Producties BV<br>
