--- a/app/_layouts/front.html
+++ b/app/_layouts/front.html
@@ -1,8 +1,8 @@
-{% include _sections/head.html %}
+{% include section/section.head.html %}
 
-{% include _blocks/header.html %}
+{% include section/section.header.html %}
 
-{% include _blocks/hero.html %}
+{% include block/block.hero.html %}
 
 <main>
 
@@ -26,8 +26,8 @@
 		{% endif %}{% endfor %}
 	</section>
 
-	{% include _blocks/contactform.html %}
+	{% include block/block.contactform.html %}
 	
 </main>
 
-{% include _sections/footer.html %}
+{% include section/section.footer.html %}
