--- a/app/assets/sass/pages/_page.scss
+++ b/app/assets/sass/pages/_page.scss
@@ -8,76 +8,70 @@
 }
 
 @include breakpoint($desktop) {
-	.page, 
+	.page,
 	.detailpage {
-		.block {
+	.block {
 
-			// reference block
-			&.references {
-				display: flex;
-				flex-direction: row;
-				justify-content: space-between;
-				flex-wrap: wrap;
-				min-height: 350px;
-				padding-top: $gutter;
+		&.references {
+			display: flex;
+			flex-direction: row;
+			justify-content: space-between;
+			flex-wrap: wrap;
+			min-height: 350px;
+			padding-top: $gutter;
 
+			.subtitle {
+				position: absolute;
+				left: 0;
+				top: -$gutter/2;
+			}
 
-				.subtitle {
-					position: absolute;
-					left: 0;
-					top: -$gutter/2;
-				}
+			.title {
+				font-size: 2rem !important;
+			}
 
-				.title {
-					font-size: 2rem !important;
-				}
+			.keywords {
+				font-size: 16px !important;
+			}
 
-				.keywords {
-					font-size: 16px !important;
-				}
+			.reference-image {
+				height: 100%;
+				width: calc(#{$max-width} / 37 * 17) !important;
+			}
 
-				.reference-image {
-					height: 100%;
-					width: calc(#{$max-width} / 37 * 17) !important;
-				}
+			.reference {
+				margin-top: $gutter;
+				width: calc(#{$max-width} / 37 * 17);
+				margin-bottom: 0;
 
-				.reference {
-					margin-top: $gutter;
-					width: calc(#{$max-width} / 37 * 17);
-					margin-bottom: 0;
-
-					.introduction {
-						.button {
-							text-transform: uppercase;
-							width: calc(#{$max-width} / 37 * 15);
-							left: calc(#{$max-width} / 37 * 1);
-							bottom: calc(#{$max-width} / 37 * 1);
-						}
+				.introduction {
+					.button {
+						text-transform: uppercase;
+						width: calc(#{$max-width} / 37 * 15);
+						left: calc(#{$max-width} / 37 * 1);
+						bottom: calc(#{$max-width} / 37 * 1);
 					}
 				}
 			}
+		}
 
-			// contactform
 			&.contactform {
-				display: flex;
-				justify-content: space-between;
-				height: 700px;
-				// width: calc(#{$max-width} / 37 * 17);
+				.inner {
+					height: 700px;
+					display: flex;
+					justify-content: space-between;
 
-				.form {
-					padding: 0 calc(#{$max-width} / 37 * 1);
-				}
+					.form {
+						padding: 0 calc(#{$max-width} / 37 * 1);
+					}
 
-				> * {
-					flex: 0 0 calc(#{$max-width} / 37 * 17);
-				}
+					> * {
+						flex: 0 0 calc(#{$max-width} / 37 * 17);
+					}
 
-				.picture {
-					display: block;
-					height: 100%;
-					
-					.img {
-
+					.picture {
+						display: block;
+						height: 100%;
 					}
 				}
 			}
