--- a/app/_includes/block/block.contactform.html
+++ b/app/_includes/block/block.contactform.html
@@ -1,4 +1,4 @@
-<section class="block contactform" id="contact">
+{% capture block %}
 	<form id="gform" class="form" method="POST">
 		<strong class="subtitle">Contact</strong>
 		<p>Heb je een vraag of wil je kennis maken? Bel op <a class="tel"></a> of stuur me een berichtje.</p>
@@ -7,24 +7,26 @@
 			<label for="name">Naam</label>
 		  <input class="form-field" type="text" name="name" placeholder="B.v. Charlotte van Dijk" required>
 		</div>
-		
-		<div class="salutation-2">    
+
+		<div class="salutation-2">
 			<label for="email">E-mail</label>
 		  <input class="form-field" type="email" name="email" placeholder="B.v. charlottevandijk@gmail.com" required>
 		</div>
 
 		<label for="subject">Onderwerp</label>
 	  <input class="form-field" type="text" name="subject" placeholder="{{page.subject}}" required>
-		
+
 		<label for="message">Bericht</label>
 	  <textarea class="form-field" name="message" rows="5" placeholder="{{page.message}}" required></textarea>
 
 	  <input type="hidden" id="honeypot" type="text" name="honeypot" value="" />
 	  <input type="hidden"class="to" type="text" name="to" value="" />
 	  <input class="send button" type="submit" value="Verstuur bericht" >
-	  <span class="checkmark">{% include _svg/checkmark.svg %}</span>
+	  <span class="checkmark">{% include svg/checkmark.svg %}</span>
 	</form>
 	<picture class="focuspoint picture">
 			<img class="img" src="{{ page.formimage }}" alt="Jelle Kuiper">
 	</picture>
-</section>
+{% endcapture %}
+
+{% include block/block.html classes="contactform" id="contact" %}
