--- a/app/_includes/block/block.counter.html
+++ b/app/_includes/block/block.counter.html
@@ -1,4 +1,4 @@
-<section class="block counter">
+{% capture block %}
 	<div class="wedding-counter">
 		<span class="counter">{{ page.firstTimer }}</span>
 		<span class="text">{{ page.firstTitle }}</span>
@@ -7,4 +7,6 @@
 		<span class="counter">{{ page.secondTimer }}</span>
 		<span class="text">{{ page.secondTitle }}</span>
 	</div>
-</section>
+{% endcapture %}
+
+{% include block/block.html classes="counter" %}
