--- a/app/_layouts/detailpage.html
+++ b/app/_layouts/detailpage.html
@@ -1,10 +1,10 @@
 
-{% include _sections/head.html %}
+{% include section/section.head.html %}
 
-{% include _blocks/header.html %}
+{% include section/section.header.html %}
 
 <div class="heading">
-	<a href="/theaterproducties" class="back">{% include _svg/arrow-left.svg %} terug</a>
+	<a href="/theaterproducties" class="back">{% include svg/arrow-left.svg %} terug</a>
 	<h1 class="title">{{ page.title }}</h1>
 </div>
 
@@ -21,9 +21,9 @@
 		<a href="{{ page.externalUrl }}" target="blank" class="button">{{ page.button }}</a>
 	{% endif %}
 
-	{% include _blocks/video.html %}
+	{% include block/block.video.html %}
 
-	{% include _blocks/contactform.html %}
+	{% include block/block.contactform.html %}
 
 	<section class="block references">
 	<strong class="subtitle">Andere producties</strong>
@@ -45,4 +45,4 @@
 	</section>
 </main>
 
-{% include _sections/footer.html %}
+{% include section/section.footer.html %}
