--- a/app/assets/sass/elements/blocks/_block.counter.scss
+++ b/app/assets/sass/elements/blocks/_block.counter.scss
@@ -1,30 +1,34 @@
 .block.counter {
 	@include background();
-	display: flex;
-	justify-content: space-around;
 
-	> div {
+	.inner {
 		display: flex;
-		justify-content: center;
-		text-align: center;
-		flex-direction: column;
+		justify-content: space-around;
 
-		.counter {
-			color: $primary;
-			font-size: 2em;
+		> div {
+			display: flex;
+			justify-content: center;
+			text-align: center;
+			flex-direction: column;
+
+			.counter {
+				color: $primary;
+				font-size: 2em;
+			}
 		}
 	}
 }
 
 @include breakpoint($desktop) {
 	.block.counter {
-		> div {
-			font-size: 1.5rem;
-			.counter {
-				font-weight: light;
-				font-size: 2.5rem;
+		.inner {
+			> div {
+				font-size: 1.5rem;
+				.counter {
+					font-weight: light;
+					font-size: 2.5rem;
+				}
 			}
 		}
-
 	}
 }
